🐛 ship: fix footer margin on mobile

--- a/theme/_sass/containers/_footer.scss
+++ b/theme/_sass/containers/_footer.scss
@@ -39,6 +39,7 @@ footer > .company {
 
   @media only screen and (max-width: 768px) {
     align-items: center;
+    margin-top: 20px;
   }
 }
 
